Free, nano optimizations.  FindBugs.