@@ -14,7 +14,7 @@
 	    
    Ganymede Directory Management System
  
-   Copyright (C) 1996-2009
+   Copyright (C) 1996-2010
    The University of Texas at Austin
 
    Contact information
@@ -606,7 +606,7 @@ public class glogin extends JApplet implements Runnable, ActionListener, ClientL
 
     // "Connecting... {0}"
     connector = new JButton(ts.l("global.connecting_text",
-				 new Character(spinAry[spindex])));
+				 Character.valueOf(spinAry[spindex])));
     connector.setOpaque(true);
     connector.addActionListener(this);
 
@@ -668,7 +668,7 @@ public class glogin extends JApplet implements Runnable, ActionListener, ClientL
 		    {
 		      // "Connecting... {0}"
 		      connector.setText(ts.l("global.connecting_text",
-					     new Character(spinAry[spindex])));
+					     Character.valueOf(spinAry[spindex])));
 		    }
 		  });
 	      }
